UX: fix visibility of grant badge modal dropdowns

--- a/app/assets/stylesheets/common/modal/modal-overrides.scss
+++ b/app/assets/stylesheets/common/modal/modal-overrides.scss
@@ -520,3 +520,17 @@
     margin-top: 1em;
   }
 }
+
+.d-modal.grant-badge-modal {
+  .d-modal {
+    &__body {
+      @include breakpoint(mobile-extra-large) {
+        flex-grow: 1;
+      }
+
+      @include breakpoint(medium) {
+        overflow: visible;
+      }
+    }
+  }
+}
